# luckerma.github.io

./: .gitignore  .markdownlint-cli2.yaml  .pre-commit-config.yaml  README.md  _quarto.yml  index.html  main.qmd  pyproject.toml
.github/workflows/: publish.yml
