[project]
name = "luckerma-github-io"
version = "1.0.0"
description = "Personal website (GitHub Pages) for luckerma"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[dependency-groups]
dev = ["pre-commit>=4.5.1", "ruff>=0.15.4", "taplo>=0.9.3"]

[tool.ruff]
line-length = 88
extend-include = ["*.md"]

[tool.ruff.lint]
preview = true
extend-select = ["B", "I", "Q"]

[tool.ruff.format]
preview = true
