[project]
name = "luckerma-github-io"
version = "0.1.0"
description = "Personal website"
readme = "README.md"
requires-python = ">=3.14"


dependencies = ["pre-commit>=4.5.1", "ruff>=0.15.8"]

[tool.ruff]
line-length = 88

[tool.ruff.format]
preview = true

[tool.ruff.lint]
preview = true
extend-select = ["B", "I", "Q"]
